--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
   <head>
     <meta charset="utf-8">
     <title>portfolio</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css">
+    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Lato|Lexend+Deca|Lexend+Giga&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css?family=Arya|Darker+Grotesque|Fira+Sans+Condensed|Gayathri|Open+Sans|Gudea|Pontano+Sans&display=swap" rel="stylesheet">
   </head>
   <body>
     <div id="app"></div>
