--- a/index.html
+++ b/index.html
@@ -1,13 +1,21 @@
 <!DOCTYPE html>
 <html lang="en">
   <head>
-    <meta charset="utf-8">
+    <meta charset="utf-8" />
     <title>portfolio</title>
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bulma/0.7.5/css/bulma.min.css">
-    <script defer src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"></script>
-    <link href="https://fonts.googleapis.com/css?family=Lato|Lexend+Deca|Lexend+Giga&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css?family=Arya|Darker+Grotesque|Fira+Sans+Condensed|Gayathri|Open+Sans|Gudea|Pontano+Sans&display=swap" rel="stylesheet">
+    <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <script
+      defer
+      src="https://use.fontawesome.com/releases/v5.3.1/js/all.js"
+    ></script>
+    <link
+      href="https://fonts.googleapis.com/css?family=Lato|Lexend+Deca|Lexend+Giga&display=swap"
+      rel="stylesheet"
+    />
+    <link
+      href="https://fonts.googleapis.com/css?family=Arya|Darker+Grotesque|Fira+Sans+Condensed|Gayathri|Open+Sans|Gudea|Pontano+Sans&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div id="app"></div>
